--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ Get rid of add to calendar section and put add to calendar button in each itiner
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 1rem 2rem;
+      padding: 3rem 2rem 1rem 2rem;
       gap: 1rem;
       overflow-y: auto;
       box-sizing: border-box;
@@ -439,7 +439,7 @@ Get rid of add to calendar section and put add to calendar button in each itiner
 
       .events-side {
         flex: none;
-        padding: 2rem 1rem;
+        padding: 1rem 1rem;
         flex-direction: column;
         gap: 1rem;
       }
@@ -476,6 +476,10 @@ Get rid of add to calendar section and put add to calendar button in each itiner
         font-size: 1rem;
         padding: 0.8rem 1.5rem;
       }
+
+      .video-container video {
+        max-height: 200px;
+      }
     }
 
     @media (max-width: 480px) {
@@ -502,6 +506,10 @@ Get rid of add to calendar section and put add to calendar button in each itiner
       .animated-descriptor {
         min-width: 150px;
       }
+
+      .video-container video {
+        max-height: 180px;
+      }
     }
 
     /* Video Container */
@@ -518,7 +526,7 @@ Get rid of add to calendar section and put add to calendar button in each itiner
     .video-container video {
       width: 100%;
       height: auto;
-      max-height: 200px;
+      max-height: 350px;
       object-fit: cover;
       display: block;
       pointer-events: none;
