--- a/index.html
+++ b/index.html
@@ -249,13 +249,11 @@ Get rid of add to calendar section and put add to calendar button in each itiner
     .details-section {
       height: 100vh;
       min-height: 100vh;
-      max-height: 100vh;
       background: #E5E1D9;
       display: flex;
       align-items: center;
       justify-content: center;
       position: relative;
-      overflow: hidden;
     }
 
     /* Events - Full Width */
@@ -269,7 +267,6 @@ Get rid of add to calendar section and put add to calendar button in each itiner
       align-items: center;
       padding: 3rem 2rem 1rem 2rem;
       gap: 1rem;
-      overflow-y: auto;
       box-sizing: border-box;
     }
 
@@ -427,9 +424,9 @@ Get rid of add to calendar section and put add to calendar button in each itiner
 
       .details-section {
         flex-direction: column;
-        height: 100vh;
+        height: auto;
         min-height: 100vh;
-        max-height: 100vh;
+        max-height: none;
       }
 
       .events-side {
@@ -437,6 +434,7 @@ Get rid of add to calendar section and put add to calendar button in each itiner
         padding: 1rem 1rem;
         flex-direction: column;
         gap: 1rem;
+        margin-top: 0.5rem;
       }
 
       .location-heading {
@@ -504,6 +502,17 @@ Get rid of add to calendar section and put add to calendar button in each itiner
 
       .video-container video {
         max-height: 180px;
+      }
+    }
+
+    @media (max-width: 375px) {
+      .events-side {
+        padding: 2.5rem 1rem;
+        margin-top: 1.5rem;
+      }
+
+      .animated-text {
+        font-size: clamp(2.2rem, 5.5vw, 3rem);
       }
     }
 
