--- a/index.html
+++ b/index.html
@@ -1,13 +1,3 @@
-<!--
-Desktop:
-Coffee is getting cut off
-Add space below "Add our wedding weekend to your calendar"
-
-Mobile:
-- Just in mobile can we move "Tanaz & Vince are" upwards
-- Reduce the space on mobile below "Tanaz & Vince are"
-- Make the "Add our wedding weekend to your calendar" button take up only 2 lines instead of 3
--->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -273,7 +263,7 @@ Mobile:
     }
 
     /* Responsive Design */
-         @media (max-width: 768px) {
+      @media (max-width: 768px) {
        .hero-section {
          flex-direction: column;
          height: 100vh;
@@ -316,10 +306,10 @@ Mobile:
 
        .events-side {
          flex: none;
-         padding: 1rem 1rem;
+         padding: 0 1rem 3rem 1rem;
          flex-direction: column;
          gap: 1rem;
-         margin-top: 0.5rem;
+         margin-top: 0;
          height: auto;
          min-height: auto;
        }
@@ -359,7 +349,7 @@ Mobile:
          max-height: 60vh;
        }
 
-              .text-side {
+        .text-side {
          height: 40vh;
          min-height: 40vh;
          max-height: 40vh;
@@ -371,24 +361,13 @@ Mobile:
          font-size: clamp(2.2rem, 5.5vw, 3.5rem);
        }
 
-             .animated-descriptor {
+      .animated-descriptor {
          min-width: 150px;
          height: 4em;
        }
 
       .video-container video {
         max-height: 180px;
-      }
-    }
-
-    @media (max-width: 375px) {
-      .events-side {
-        padding: 2.5rem 1rem;
-        margin-top: 1.5rem;
-      }
-
-      .animated-text {
-        font-size: clamp(2.2rem, 5.5vw, 3rem);
       }
     }
   </style>
@@ -467,9 +446,9 @@ Mobile:
     const descriptors = [
       "on a run",
       "trying a new recipe",
-      "singing songs about each other",
+      "serenading each other",
       "reading a new fantasy series",
-      "drinking their morning coffee",
+      "drinking morning coffee",
       "at the movie theater",
       "planning their next trip",
       "laughing their butts off",
