--- a/index.html
+++ b/index.html
@@ -266,27 +266,16 @@
       @media (max-width: 768px) {
        .hero-section {
          flex-direction: column;
-         height: 100vh;
          min-height: 100vh;
-         max-height: 100vh;
-       }
-
-       .image-side,
-       .text-side {
-         flex: none;
-         min-height: 50vh;
        }
 
        .image-side {
-         height: 60vh;
+         flex: 1;
          min-height: 60vh;
-         max-height: 60vh;
        }
 
        .text-side {
-         height: 40vh;
-         min-height: 40vh;
-         max-height: 40vh;
+         flex: 0 0 auto;
          padding-top: 1.5rem;
          padding-bottom: 1rem;
        }
@@ -342,28 +331,25 @@
        }
      }
 
-    @media (max-width: 480px) {
+        @media (max-width: 480px) {
        .image-side {
-         height: 60vh;
-         min-height: 60vh;
-         max-height: 60vh;
+         flex: 1;
+         min-height: 65vh;
        }
 
-        .text-side {
-         height: 40vh;
-         min-height: 40vh;
-         max-height: 40vh;
-         padding-top: 1.5rem;
-         padding-bottom: 1rem;
+       .text-side {
+         flex: 0 0 auto;
+         padding-top: 1rem;
+         padding-bottom: 0.5rem;
        }
 
        .animated-text {
-         font-size: clamp(2.2rem, 5.5vw, 3.5rem);
+         font-size: clamp(1.8rem, 4.5vw, 2.8rem);
        }
 
-      .animated-descriptor {
+             .animated-descriptor {
          min-width: 150px;
-         height: 4em;
+         height: 3.5em;
        }
 
       .video-container video {
