--- a/index.html
+++ b/index.html
@@ -84,6 +84,12 @@
       color: #52474275;
     }
 
+    @media (min-width: 769px) {
+      .animated-text {
+        margin-top: 3rem;
+      }
+    }
+
     .animated-descriptor {
       display: flex;
       align-items: flex-start;
@@ -271,7 +277,7 @@
 
        .image-side {
          flex: 1;
-         min-height: 60vh;
+         min-height: clamp(50vh, 15vw + 45vh, 70vh);
        }
 
        .text-side {
@@ -281,7 +287,7 @@
        }
 
        .animated-text {
-         font-size: clamp(2.5rem, 6vw, 4rem);
+         font-size: clamp(2.8rem, 6.5vw, 4.2rem);
          padding: 1rem;
        }
 
@@ -334,7 +340,7 @@
         @media (max-width: 480px) {
        .image-side {
          flex: 1;
-         min-height: 65vh;
+         min-height: clamp(55vh, 20vw + 50vh, 75vh);
        }
 
        .text-side {
@@ -344,7 +350,7 @@
        }
 
        .animated-text {
-         font-size: clamp(1.8rem, 4.5vw, 2.8rem);
+         font-size: clamp(2.2rem, 5.5vw, 3.2rem);
        }
 
              .animated-descriptor {
