remove bottom padding

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
          height: auto;
          min-height: 100vh;
          max-height: none;
-         padding: 0 0 2rem 0;
+         padding: 0;
        }
 
        .events-side {
