--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tanaz & Vince - Save the Date</title>
+  <title>Tanaz & Vince - Save Our Date</title>
   <link
     href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;400;500&family=Crimson+Text:wght@400;600;700&display=swap"
     rel="stylesheet">
@@ -202,7 +202,6 @@
     .event-description {
       font-size: 1.1rem;
       color: #52474275;
-      font-style: italic;
       margin-top: 0.5rem;
       position: relative;
       z-index: 2;
@@ -400,7 +399,7 @@
           <div class="event-date">Friday, May 1</div>
           <div class="event-name">Pithi and Sangeet</div>
           <div class="event-location">Gotham Hall</div>
-          <div class="event-description">First up: the pithi, where we smear stuff on the couple in the name of tradition (and skincare). Then it’s sangeet time—expect colorful performances and beautiful chaos!
+          <div class="event-description">At the pithi, guests will smear turmeric paste on the couple in the name of tradition (and skincare). Then it's sangeet time - expect colorful performances and beautiful chaos!
           </div>
         </div>
 
@@ -408,7 +407,7 @@
           <div class="event-date">Saturday, May 2</div>
           <div class="event-name">Ceremony and Reception</div>
           <div class="event-location">Gotham Hall</div>
-          <div class="event-description">The grand finale! Watch us make it official, try not to cry (or do, it’s sweet), then join us for food, drinks, and dancing. Can't wait to make memories!
+          <div class="event-description">The grand finale! Watch us make it official, try not to cry (or do, it's sweet). Then join us for food, drinks, and dancing. Can't wait to make memories with you all!
           </div>
         </div>
       </div>
